@@ -3,6 +3,8 @@ package Configuration;
 import org.json.JSONObject;
 
 import java.io.IOException;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
@@ -13,8 +15,12 @@ public class ConfigDataRetriever {
     static {
         String content;
         try {
-            String path = "java/Configuration/config.json";
-            content = new String(Files.readAllBytes(Paths.get(path)));
+            InputStream is = ConfigDataRetriever.class.getClassLoader().getResourceAsStream("Configuration/config.json");
+            if (is == null) {
+                throw new RuntimeException("Config file not found in resources");
+            }
+            byte[] bytes = is.readAllBytes();
+            content = new String(bytes, StandardCharsets.UTF_8);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
